-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 9
-
Component/s: core-libs
-
b142
-
windows
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8226681 | openjdk8u232 | Pavel Rappo | P4 | Resolved | Fixed | b01 |
| JDK-8223272 | 8u231 | Ivan Gerasimov | P4 | Resolved | Fixed | b01 |
| JDK-8229615 | emb-8u231 | Ivan Gerasimov | P4 | Resolved | Fixed | b01 |
| JDK-8223338 | 7u241 | Ivan Gerasimov | P4 | Resolved | Fixed | b01 |
JNI pending exceptions
- backported by
-
JDK-8223272 Pending exceptions in java.base/windows/native/libnio
-
- Resolved
-
-
JDK-8223338 Pending exceptions in java.base/windows/native/libnio
-
- Resolved
-
-
JDK-8226681 Pending exceptions in java.base/windows/native/libnio
-
- Resolved
-
-
JDK-8229615 Pending exceptions in java.base/windows/native/libnio
-
- Resolved
-