8168417: Pending exceptions in java.base/windows/native/libnio

Reviewed-by: chegar, alanb